fixing text overflow

--- a/public/css/olc-contract-view.css
+++ b/public/css/olc-contract-view.css
@@ -165,8 +165,8 @@
     padding: 15px;
 }
 
-.text-panel {
-    width: 50%;
+.text-panel, .pdf-annotator {
+    width: 48%;
     background: #fff;
     border-radius: 4px;
     -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
@@ -174,41 +174,28 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     padding: 15px 30px;
     float: left;
-    margin: 10px;
-}
-
-.text-panel {
-    width: 47%;
-    float: left;
-    background: #fff;
-    border-radius: 4px;
-    -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-    padding: 15px 30px;
-    float: left;
-    margin: 20px;
+    margin: 10px 10px 0 17px;
 }
 
 .text-annotator {
-    height: 85vh;
+    height: 72vh;
     position: relative;
     overflow: auto;
 }
 
-.pdf-annotator {
-    width: 50%;
-    background: #fff;
-    border-radius: 4px;
-    -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-    -moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-    height: 85vh;
-    overflow: auto;
-    position: relative;
-    float: left;
-    margin: 10px;
-}
+/*.pdf-annotator {*/
+/*width: 48%;*/
+/*background: #fff;*/
+/*border-radius: 4px;*/
+/*-webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);*/
+/*-moz-box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);*/
+/*box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);*/
+/*height: 85vh;*/
+/*overflow: auto;*/
+/*position: relative;*/
+/*float: left;*/
+/*margin: 10px;*/
+/*}*/
 
 .text-viewer > span {
     display: block;
@@ -233,10 +220,6 @@
     padding: 0 18px;
     border-right: 1px solid #DCDFE2;
     width: 25%;
-}
-
-.annotations-viewer {
-    padding: 0;
 }
 
 .search-results-list {
@@ -312,8 +295,8 @@
 
 .annotation-item {
     font-size: 12px;
-    border: 0;
     padding: 10px 20px 0;
+    border-bottom: 2px solid #E6E6E6;
 }
 
 .annotation-item .annotation-category-en {
@@ -426,7 +409,7 @@
 }
 
 .annotation-sort {
-    margin: 0 18px 0;
+    margin: 0 18px 10px;
 }
 
 .annotation-sort > span {
@@ -436,7 +419,7 @@
     margin-right: 10px;
     margin-bottom: 10px;
     background: #C5C5C5;
-    line-height: 28px;
+    line-height: 31px;
     -webkit-border-radius: 14px;
     -moz-border-radius: 14px;
     border-radius: 14px;
@@ -729,16 +712,24 @@
 }
 
 .annotations-viewer {
+    padding: 0;
     float: left;
     width: 25%;
     position: relative;
     border-right: 1px solid #DCDFE2;
-    background: #f0f0f0;
+    background: #f5f5f5;
 }
 
 .annotation-inner-viewer {
-    height: 87vh;
+    height: 88vh;
     overflow-y: scroll;
+}
+
+.annotation-inner-viewer .annotation-title {
+    background: url(../images/ic-annotate-full.png) no-repeat 0 21px;
+    padding-left: 32px;
+    border-bottom: 0;
+    padding-bottom: 10px;
 }
 
 .navigation a:nth-last-child(-n+2) {
@@ -893,7 +884,7 @@
 }
 
 .fixed + .document-wrap {
-    padding-top: 84px;
+    padding-top: 44px;
 }
 
 .note-wrapper {
@@ -928,6 +919,7 @@
 }
 
 .social-share {
+    display: none;
     margin: 12px;
     float: right;
     padding: 0;
@@ -1006,4 +998,55 @@
     font-size: 11px;
     margin-left: 4px;
     color: #888;
+}
+
+.annotation-item.selected-annotation {
+    background-color: #dfdfdf;
+}
+
+.annotations-list {
+    background: #f0f0f0;
+    border: 1px solid #e6e6e6;
+    margin: 5px;
+}
+
+.annotation-item .category {
+    color: rgba(64, 64, 64, 0.7);
+    font-size: 12px;
+    margin-bottom: 5px;
+}
+
+.annotation-item .annotated-text {
+    background: url(../images/ic-dark-annotate-bg.png) no-repeat 0 5px;
+    font-size: 14px;
+    line-height: 22px;
+    padding-left: 18px;
+}
+
+.annotation-item .annotation-item-content {
+    padding-left: 0;
+}
+
+@media all and (min-width: 992px) {
+    .text-panel, .pdf-annotator {
+        margin: 10px 17px 0 22px;
+    }
+}
+
+@media all and (min-width: 1160px) {
+    .text-panel, .pdf-annotator {
+        width: 48.5%;
+    }
+}
+
+@media all and (min-width: 1360px) {
+    .text-panel, .pdf-annotator {
+        width: 49%;
+    }
+}
+
+@media all and (min-width: 1550px) {
+    .text-panel, .pdf-annotator {
+        margin-left: 26px;
+    }
 }
