--- a/public/css/olc-style.css
+++ b/public/css/olc-style.css
@@ -685,7 +685,8 @@ footer {
 
 .contract-panel-title {
   overflow: hidden;
-  margin-top: 3px; }
+  margin-top: 3px;
+  font: 24px/32px Open-Sans-Light; }
 
 .action-links {
   float: right;
@@ -1424,14 +1425,14 @@ td.contract-date {
     top: 43px; }
 
 .annotate-text {
-  background: url(../images/ic-annotate-title.png) no-repeat left 5px;
+  background: url(../images/ic-annotate-title.png) no-repeat left 0;
   padding-left: 23px !important;
-  display: inline-block;
+  display: inline;
   font-size: 12px;
   color: rgba(64, 64, 64, 0.7);
   width: 18px;
-  height: 22px;
-  text-indent: -9999px; }
+  text-indent: -9999px;
+  padding-bottom: 3px; }
 
 .search-page-form {
   overflow: hidden;
