--- a/public/css/rc-contract-view.css
+++ b/public/css/rc-contract-view.css
@@ -174,6 +174,7 @@
     padding: 15px 30px;
     float: left;
     margin: 10px;
+    height: 86vh;
 }
 
 .text-annotator {
