--- a/resources/assets/scss/style.scss
+++ b/resources/assets/scss/style.scss
@@ -2023,14 +2023,14 @@ td.contract-date {
 }
 
 .annotate-text {
-  background: url(../images/ic-annotate-title.png) no-repeat left 5px;
+  background: url(../images/ic-annotate-title.png) no-repeat left 0;
   padding-left: 23px !important;
-  display: inline-block;
+  display: inline;
   font-size: 12px;
-  color: $color_cape_cod_70_approx;
+  color: rgba(64, 64, 64, 0.7);
   width: 18px;
-  height: 22px;
   text-indent: -9999px;
+  padding-bottom: 3px;
 }
 
 .search-page-form {
